    bundle an old enough Encode.pm for that not to be a problem: the
    system might have a newer Encode.pm installed separately, like Fedora 20.
    (Closes: #776181; thanks, Anders Kaseorg)
  * If neither timezone nor TZ is set, set both to :/etc/localtime if
    we're on a GNU system and that file exists, or GMT otherwise

 -- Joey Hess <id@joeyh.name>  Sat, 24 Jan 2015 23:59:20 -0400

ikiwiki (3.20150107) experimental; urgency=medium

  [ Joey Hess ]
  * Added ikiwiki-comment program.
  * Add missing build-depends on libcgi-formbuilder-perl, needed for
    t/relativity.t
  * openid: Stop suppressing the email field on the Preferences page.
  * Set Debian package maintainer to Simon McVittie as I'm retiring from
    Debian.

  [ Simon McVittie ]
  * calendar: add calendar_autocreate option, with which "ikiwiki --refresh"
    can mostly supersede the ikiwiki-calendar command.
    Thanks, Louis Paternault
  * search: add more classes as a hook for CSS. Thanks, sajolida
  * core: generate HTML5 by default, but keep avoiding new elements
    like <section> that require specific browser support unless html5 is
    set to 1.
  * Tell mobile browsers to draw our pages in a device-sized viewport,
    not an 800-1000px viewport designed to emulate a desktop/laptop browser.
  * Add new responsive_layout option which can be set to 0 if your custom
    CSS only works in a large viewport.
  * style.css, actiontabs, blueview, goldtype, monochrome: adjust layout
    below 600px ("responsive layout") so that horizontal scrolling is not
    needed on smartphone browsers or other small viewports.
  * core: new libdirs option alongside libdir. Thanks, Louis Paternault

  [ Amitai Schlair ]
  * core: log a debug message before waiting for the lock.
    Thanks, Mark Jason Dominus
  * build: in po/Makefile, use the same $(MAKE) as the rest of the build.
    Thanks, ttw
  * blogspam: use the 2.0 JSON API (the 1.0 XML-RPC API has been EOL'd).
    Closes: #774441

  [ Joey Hess ]