@@ -10,6 +10,8 @@ ikiwiki (3.20150108) UNRELEASED; urgency=medium
     (Closes: #776181; thanks, Anders Kaseorg)
   * If neither timezone nor TZ is set, set both to :/etc/localtime if
     we're on a GNU system and that file exists, or GMT otherwise
+  * t/inline.t: accept translations of "Add a new post titled:"
+    (Closes: #779365)
 
  -- Joey Hess <id@joeyh.name>  Sat, 24 Jan 2015 23:59:20 -0400
 
